tests/golden/errors/uppercase_identifier.kso
myName = 1
print "{myName}"
