tests/golden/errors/uppercase_identifier.stderr
error[formatting]: identifiers are snake_case, all lowercase, always
  --> uppercase_identifier.kso:1:3
   1 | myName = 1
         ^
error[formatting]: identifiers are snake_case, all lowercase, always
  --> uppercase_identifier.kso:2:11
   2 | print "{myName}"
                 ^
